@@ -1,5 +1,6 @@
 0.8
-- changed zip structure to provide minified version
+- changed zip structure to provide minified version and modified to ant build (#40)
+- fixed a problem where dropdown is not visible if displayed in modal dialog with z-index above some value (#41)
 
 0.7
 - merged patch from bishiboosh for bgiframe integration (#34)
